fixed horizontal alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -15,6 +15,9 @@ h6 {
     font-weight: 700;
 }
 
+body {
+    overflow-x: hidden;
+}
 .topnav {
     font-size: 14px; 
 }
